--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -1,5 +1,13 @@
-<h1>投稿一覧</h1>
-<%= @posts.each do |post| %>
-	<p>タイトル</p>
-	<%= list.title %>
-<% end %>
+<div class="container">
+	<div class="row">
+
+		<%= render "users/userinfo", user: @user %>
+
+		<div class="col-lg-9">
+			<h2>投稿一覧</h2>
+			<%= @posts.each do |post| %>
+				<%= attachment_image_tag post, :image, format: 'jpeg', size: "100x100" %>
+			<% end %>
+		</div>
+	</div>
+</div>
