--- a/app/views/devise/shared/_header.html.erb
+++ b/app/views/devise/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
 	<div class="navi clearfix">
-		<%= link_to "Cafelog", root_path %>
+		<%= link_to "Cafelog", root_path, class: "logo" %><i class="fas fa-coffee"></i>
 		<nav>
 			<ul>
 				<li class="navlist"><%= link_to "新規登録", new_user_registration_path %></li>
