--- a/app/views/post_images/edit.html.erb
+++ b/app/views/post_images/edit.html.erb
@@ -1,2 +1,33 @@
-<h1>PostImages#edit</h1>
-<p>Find me in app/views/post_images/edit.html.erb</p>
+<div class="container">
+	<div class="row">
+		<%= form_for(@post) do |f| %>
+			<div class="col-lg-offset-1 col-lg-2">
+				<h2>Post image</h2>
+				<%= attachment_image_tag @post, :image, format: 'jpeg', size: "300x300" %>
+				<%= f.attachment_field :image %>
+			</div>
+
+			<div class="col-lg-offset-3 col-lg-4">
+				<h2>Post content</h2>
+				<table class="table">
+					<tbody>
+						<tr>
+							<td>タイトル</td>
+							<td><%= f.text_field :title %></td>
+						</tr>
+						<tr>
+							<td>キャプション</td>
+							<td><%= f.text_area :caption %></td>
+						</tr>
+						<tr>
+							<td>タグ</td>
+							<td></td>
+						</tr>
+					</tbody>
+				</table>
+				<%= f.submit '更新する', class:"btn btn-success" %>
+				<%= link_to "削除する", post_image_path(@post.id), method: :delete, class:"btn btn-danger", "data-confirm" => "本当に消しますか？" %>
+			</div>
+		<% end %>
+	</div>
+</div>
