--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -4,9 +4,10 @@
 		<%= render "users/userinfo", user: @user %>
 
 		<div class="col-lg-9">
-			<h2>投稿一覧</h2>
-			<%= @posts.each do |post| %>
+			<h2>All the posts</h2>
+			<% @posts.each do |post| %>
 				<%= attachment_image_tag post, :image, format: 'jpeg', size: "100x100" %>
+				<%=link_to post.title, post_image_path(post.id) %>
 			<% end %>
 		</div>
 	</div>
