--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -2,10 +2,11 @@
 	<div class="row">
 		<%= form_for(@post) do |f| %>
 			<div class="col-lg-offset-1 col-lg-2">
-				<p>画像</p>
+				<h2>Post image</h2>
 				<%= f.attachment_field :image %>
 			</div>
-			<div class="col-lg-offset-4 col-lg-4">
+			<div class="col-lg-offset-3 col-lg-4">
+				<h2>Post content</h2>
 				<table>
 					<tbody>
 						<tr>
