--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -1,2 +1,29 @@
-<h1>PostImages#show</h1>
-<p>Find me in app/views/post_images/show.html.erb</p>
+<div class="container">
+	<div class="row">
+		<div class="col-lg-4">
+			<h2>Post image</h2>
+			<%= attachment_image_tag @post, :image, format: 'jpeg', size: "300x300" %>
+		</div>
+
+		<div class="col-lg-8">
+			<h2>Post content</h2>
+			<table class="table">
+				<tbody>
+					<tr>
+						<td width="300">タイトル</td>
+						<td width="300"><%= @post.title %></td>
+					</tr>
+					<tr>
+						<td width="300">キャプション</td>
+						<td width="300"><%= @post.caption %></td>
+					</tr>
+					<tr>
+						<td width="300">タグ</td>
+						<td width="300"></td>
+					</tr>
+				</tbody>
+			</table>
+			<%= link_to "投稿内容を編集する", edit_post_image_path(@post.id), class:"btn btn-success" %>
+		</div>
+	</div>
+</div>
