--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,13 @@
 <div class="container">
 	<div class="row">
 		<%= form_for(@user) do |f| %>
-			<div class="col-lg-3">
+			<div class="col-lg-offset-1 col-lg-2">
+				<h2>Image</h2>
+				<%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "300x300" %>
 				<%= f.attachment_field :profile_image %>
 			</div>
-			<div class="col-lg-9">
+			<div class="col-lg-offset-3 col-lg-4">
+				<h2>Profile</h2>
 				<p>name</p>
 				<%= f.text_field :name %>
 				<p>introduction</p>
