コメント機能追加

--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -3,6 +3,7 @@
 		<%= form_for(@post) do |f| %>
 			<div class="col-lg-offset-1 col-lg-2">
 				<h2>Post image</h2>
+				<img id="img1" style="width:300px;height:300px;" />
 				<%= f.attachment_field :image %>
 			</div>
 			<div class="col-lg-offset-3 col-lg-4">
