--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -6,8 +6,9 @@
 		<div class="col-lg-9">
 			<h2>All the posts</h2>
 			<% @posts.each do |post| %>
-				<%= attachment_image_tag post, :image, format: 'jpeg', size: "100x100" %>
-				<%=link_to post.title, post_image_path(post.id) %>
+			    <%=link_to post_image_path(post.id) do %>
+				<%= attachment_image_tag post, :image, format: 'jpeg', size: "200x200" %>
+				<% end %>
 			<% end %>
 		</div>
 	</div>
