--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,7 +73,7 @@ a:hover {
 .topwrapper {
 	height: 650px;
 	width: 100%;
-	background-image: url("cafe.jpg");
+	background-image: image-url("cafe.jpg");
 	background-size: cover;
 	background-position: bottom;
 }
