--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -7,6 +7,23 @@
 			  <i class="fa fa-comment"></i>
 			  <%= @post.post_comments.count %>
 			</li>
+			<!-- 以下いいね機能 -->
+			<% if @post.favorited_by?(current_user) %>
+			<li>
+			  <%= link_to post_image_favorites_path(@post), method: :delete do %>
+			    <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+			    <%= @post.favorites.count %> いいね
+			  <% end %>
+			</li>
+			<% else %>
+			<li>
+			  <%= link_to post_image_favorites_path(@post), method: :post do %>
+			    <i class="fa fa-heart-o" aria-hidden="true"></i>
+			    <%= @post.favorites.count %> いいね
+			  <% end %>
+			</li>
+			<% end %>
+			<!-- ここまで -->
 		</div>
 
 		<div class="col-lg-8">
