--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -1,92 +1,96 @@
-<div class="container">
-	<div class="row">
-		<div class="col-lg-4">
-			<h2>Post image</h2>
-			<%= attachment_image_tag @post, :image, format: 'jpeg', size: "300x300" %>
-			<li>
-			  <i class="fa fa-comment"></i>
-			  <%= @post.post_comments.count %>
-			</li>
-			<!-- 以下いいね機能 -->
-			<% if @post.favorited_by?(current_user) %>
-			<li>
-			  <%= link_to post_image_favorites_path(@post), method: :delete do %>
-			    <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
-			    <%= @post.favorites.count %> いいね
-			  <% end %>
-			</li>
-			<% else %>
-			<li>
-			  <%= link_to post_image_favorites_path(@post), method: :post do %>
-			    <i class="fa fa-heart-o" aria-hidden="true"></i>
-			    <%= @post.favorites.count %> いいね
-			  <% end %>
-			</li>
-			<% end %>
-			<!-- ここまで -->
-		</div>
-
-		<div class="col-lg-8">
-			<h2>Post content</h2>
-			<table class="table">
-				<tbody>
-					<tr>
-						<td width="300">タイトル</td>
-						<td width="300"><%= @post.title %></td>
-					</tr>
-					<tr>
-						<td width="300">キャプション</td>
-						<td width="300"><%= @post.caption %></td>
-					</tr>
-					<tr>
-						<td width="300">タグ</td>
-						<td width="300"></td>
-					</tr>
-				</tbody>
-			</table>
-			<% if @post.user_id == current_user.id %>
-			<%= link_to "投稿内容を編集する", edit_post_image_path(@post.id), class:"btn btn-success" %>
-			<% end %>
-			<div class="comment-list bt style-2" id="comments">
-			  <div class="float-wrapper">
-			    <h2 class="comment-count"><%= @post.post_comments.count %>件コメント</h2>
-			  </div>
+<div class="wrapper-contents">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-4">
+				<h2>Post image</h2>
+				<%= attachment_image_tag @post, :image, format: 'jpeg', size: "300x300" %>
+				<li>
+				  <i class="fa fa-comment"></i>
+				  <%= @post.post_comments.count %>
+				</li>
+<!-- 以下いいね機能 -->
+				<% if @post.favorited_by?(current_user) %>
+				<li>
+				  <%= link_to post_image_favorites_path(@post), method: :delete do %>
+				    <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+				    <%= @post.favorites.count %> いいね
+				  <% end %>
+				</li>
+				<% else %>
+				<li>
+				  <%= link_to post_image_favorites_path(@post), method: :post do %>
+				    <i class="fa fa-heart-o" aria-hidden="true"></i>
+				    <%= @post.favorites.count %> いいね
+				  <% end %>
+				</li>
+				<% end %>
+<!-- ここまで -->
 			</div>
-			<ol>
-			  <% @post.post_comments.each do |post_comment| %>
-			    <li class="comment">
-			      <div class="comment-body bb">
-			        <div class="comment-avatar">
-			          <div class="avatar">
-			            <%= attachment_image_tag post_comment.user, :profile_image, :size => '50x50', fallback: "noimage.png" %>
-			          </div>
-			        </div>
-			        <div class="comment-text">
-			          <div class="comment-author clearfix">
-			            <%= post_comment.user.name %>
-			            <span class="comment-meta">
-			              <span class="comment-date"><%= post_comment.created_at.strftime('%Y/%m/%d') %></span>
-			            </span>
-			          </div>
-			          <div class="comment-entry"><%= post_comment.comment %></div>
-			          <% if post_comment.user == current_user %>
-			            <div>
-			              <%= link_to "削除", post_image_post_comment_path(post_comment.post_image, post_comment), method: :delete, class: "btn btn-danger pull-right" %>
-			            </div>
-			          <% end %>
-			        </div>
-			      </div>
-			    </li>
-			  <% end %>
-			</ol>
-			<%= form_for [@post, @post_comment] do |f| %>
-			  <div class="row">
-			    <div class="col-sm-12">
-			      <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
-			    </div>
-			  </div>
-			  <%= f.submit "送信する", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
-			<% end %>
+
+			<div class="col-lg-8">
+				<h2>Post content</h2>
+				<table class="table">
+					<tbody>
+						<tr>
+							<td width="300">タイトル</td>
+							<td width="300"><%= @post.title %></td>
+						</tr>
+						<tr>
+							<td width="300">キャプション</td>
+							<td width="300"><%= @post.caption %></td>
+						</tr>
+						<tr>
+							<td width="300">タグ</td>
+							<td width="300"></td>
+						</tr>
+					</tbody>
+				</table>
+				<% if @post.user_id == current_user.id %>
+				<%= link_to "投稿内容を編集する", edit_post_image_path(@post.id), class:"btn btn-success" %>
+				<% end %>
+<!-- 以下コメント機能 -->
+				<div class="comment-list bt style-2" id="comments">
+				  <div class="float-wrapper">
+				    <h2 class="comment-count"><%= @post.post_comments.count %>件コメント</h2>
+				  </div>
+				</div>
+				<ol>
+				  <% @post.post_comments.each do |post_comment| %>
+				    <li class="comment">
+				      <div class="comment-body bb">
+				        <div class="comment-avatar">
+				          <div class="avatar">
+				            <%= attachment_image_tag post_comment.user, :profile_image, :size => '50x50', fallback: "noimage.png" %>
+				          </div>
+				        </div>
+				        <div class="comment-text">
+				          <div class="comment-author clearfix">
+				            <%= post_comment.user.name %>
+				            <span class="comment-meta">
+				              <span class="comment-date"><%= post_comment.created_at.strftime('%Y/%m/%d') %></span>
+				            </span>
+				          </div>
+				          <div class="comment-entry"><%= post_comment.comment %></div>
+				          <% if post_comment.user == current_user %>
+				            <div>
+				              <%= link_to "削除", post_image_post_comment_path(post_comment.post_image, post_comment), method: :delete, class: "btn btn-danger pull-right" %>
+				            </div>
+				          <% end %>
+				        </div>
+				      </div>
+				    </li>
+				  <% end %>
+				</ol>
+				<%= form_for [@post, @post_comment] do |f| %>
+				  <div class="row">
+				    <div class="col-sm-12">
+				      <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
+				    </div>
+				  </div>
+				  <%= f.submit "送信する", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
+				<% end %>
+<!-- ここまで -->
+			</div>
 		</div>
 	</div>
 </div>
