--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -67,7 +67,7 @@ a:visited {
 }
 
 a:hover {
-	color: blue;
+	color: white;
 }
 
 .topwrapper {
@@ -91,7 +91,12 @@ a:hover {
 	font-family: 'Raleway', sans-serif;
 }
 
-.c {
+.login-button {
+	text-align: center;
+	margin-top: 10px;
+}
+
+.cafe {
 	color: #800000;
 }
 
@@ -102,9 +107,43 @@ a:hover {
 }
 
 .about-title {
-	padding-top: 50px;
+	padding: 50px 0 20px 0;
 	font-size: 32px;
 	text-align: center;
+}
+
+.about-contents {
+	text-align: center;
+}
+
+.about-text {
+	line-height: 50px;
+}
+
+.image-group {
+	width: 930px;
+	margin: 0 auto;
+}
+
+.img {
+    float: left;
+    width: 300px;
+    height: 300px;
+    margin: 10px 10px 0 0;
+    background-size: cover;
+    background-position: center;
+}
+
+.img1 {
+	background-image: image-url("img1.jpg");
+}
+
+.img2 {
+	background-image: image-url("img2.jpg");
+}
+
+.img3 {
+	background-image: image-url("img3.jpg");
 }
 
 .feature {
@@ -113,9 +152,34 @@ a:hover {
 }
 
 .feature-title {
-	padding-top: 50px;
+	padding: 50px 0 20px 0;
 	font-size: 32px;
 	text-align: center;
+}
+
+.feature-contents {
+	text-align: center;
+}
+
+.feature-group {
+	width: 980px;
+    padding: 30px 0 90px 0;
+    margin: 0 auto;
+}
+
+.text {
+	padding: 40px 20px 0 20px;
+	font-size: 15px;
+	text-align: left;
+	line-height: 30px;
+}
+
+.features {
+	float: left;
+    width: 320px;
+    margin-right: 5px;
+    text-align: center;
+    font-size: 60px;
 }
 
 .contact {
@@ -128,6 +192,33 @@ a:hover {
 	padding-top: 20px;
 	font-size: 32px;
 	text-align: center;
+}
+
+.contact-group {
+	width: 800px;
+    padding: 30px 0 90px 0;
+    margin: 0 auto;
+}
+
+.left-contents {
+    width: 50%;
+    float: left;
+    text-align: center;
+}
+
+.right-contents {
+    width: 50%;
+    float: right;
+    text-align: center;
+}
+
+.link-icon {
+	padding-left: 40px;
+}
+
+.icon {
+	padding-right: 30px;
+	font-size: 40px;
 }
 
 footer {
