follow機能作成完了

--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -21,7 +21,9 @@
 							</tr>
 						</tbody>
 					</table>
-					<%= f.submit '投稿' %>
+					<div class="submit">
+						<%= f.submit '投稿する', class:"btn btn-primary" %>
+					</div>
 				</div>
 			<% end %>
 		</div>
