--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,8 +12,8 @@
 					<p>name</p>
 					<%= f.text_field :name %>
 					<p>introduction</p>
-					<%= f.text_area :introduction %>
-					<%= f.submit "更新する" %>
+					<%= f.text_area :introduction %><br>
+					<%= f.submit "更新する", class:"btn btn-success" %>
 				</div>
 			<% end %>
 		</div>
