--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -7,24 +7,24 @@
 			<div class="col-lg-9">
 				<table class="table">
 					<thead>
-						<h2>Users</h2>
+						<h2>Followers</h2>
 						<tr>
 							<th width="300">Image</th>
 							<th width="300">User_name</th>
 							<th width="300"></th>
 						</tr>
 					</thead>
-					<% @users.each do |user| %>
+					<% @follow.each do |follow| %>
 					<tbody>
 						<tr>
 							<td>
-							<%=link_to user_path(user.id) do %>
-							<%= attachment_image_tag user, :profile_image, :size => '50x50', fallback: "noimage.png" %>
+							<%=link_to user_path(follow.id) do %>
+							<%= attachment_image_tag follow, :profile_image, :size => '50x50', fallback: "noimage.png" %>
 							<% end %>
 							</td>
-							<td><%= user.name %></td>
-							<td><%= link_to "投稿を見る", user_path(user.id)%></td>
-							<td><%= render "relationships/follow", user: user %></td>
+							<td><%= follow.name %></td>
+							<td><%= link_to "投稿を見る", user_path(follow.id)%></td>
+							<td><%= render "relationships/follow", user: follow %></td>
 						</tr>
 					</tbody>
 					<% end %>
