--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 			<%= render "users/userinfo", user: @user %>
 
 			<div class="col-lg-9">
-				<h2>User's posts</h2>
+				<h2><%= @user.name %>'s Posts</h2>
 				<% @posts.each do |post| %>
 					<%=link_to post_image_path(post.id) do %>
 					<%= attachment_image_tag post, :image, format: 'jpeg', size: "200x200" %>
