--- a/app/views/devise/shared/_header.html.erb
+++ b/app/views/devise/shared/_header.html.erb
@@ -1,10 +1,10 @@
 <header>
 	<div class="navi clearfix">
-		<%= link_to "Cafelog", root_path, class: "logo" %><i class="fas fa-coffee"></i>
+		<%= link_to "Cafelog", root_path, class: "logo" %><i class="fas fa-coffee coffee"></i>
 		<nav>
 			<ul>
-				<li class="navlist"><%= link_to "新規登録", new_user_registration_path %></li>
-				<li class="navlist"><%= link_to "ログイン", new_user_session_path %></li>
+				<li class="navlist"><%= link_to "Sign up", new_user_registration_path %></li>
+				<li class="navlist"><%= link_to "Login", new_user_session_path %></li>
 			</ul>
 		</nav>
 	</div>
