--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,6 @@
 <header>
 	<div class="navi clearfix">
-		<%= link_to "Cafelog", root_path, class: "logo" %><i class="fas fa-coffee"></i>
+		<%= link_to "Cafelog", root_path, class: "logo" %><i class="fas fa-coffee coffee"></i>
 		<nav>
 			<ul>
 				<li class="navlist"><%= link_to "About", "#1" %></li>
@@ -14,7 +14,7 @@
 
 <div class="topwrapper">
 	<div class="title">
-		<p class="top-title"><span class="cafe">Cafe</span>log<i class="fas fa-coffee"></i></p>
+		<p class="top-title"><span class="cafe">Cafe</span>log<i class="fas fa-coffee coffee"></i></p>
 	</div>
 	<div class="login-button">
 		<%= link_to "ログインする", new_user_session_path, class:"btn btn-warning" %>
