--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,8 +37,8 @@ header {
 	font-family: 'Raleway', sans-serif;
 }
 
-i {
-	font-size: 40px;
+.coffee {
+	font-size: 30px;
 }
 
 .navi {
@@ -55,6 +55,7 @@ nav {
 	padding: 0 30px;
 	line-height: 70px;
 	font-size: 20px;
+	font-family: 'Quicksand', sans-serif;
 }
 
 a:link {
