--- a/app/views/devise/shared/_header.html.erb
+++ b/app/views/devise/shared/_header.html.erb
@@ -3,8 +3,8 @@
 		<%= link_to "Cafelog", root_path, class: "logo" %><i class="fas fa-coffee coffee"></i>
 		<nav>
 			<ul>
-				<li class="navlist"><%= link_to "Sign up", new_user_registration_path %></li>
-				<li class="navlist"><%= link_to "Login", new_user_session_path %></li>
+				<li class="navlist"><i class="fas fa-user-plus"></i><%= link_to "Sign up", new_user_registration_path %></li>
+				<li class="navlist"><i class="fas fa-sign-in-alt"></i><%= link_to "Login", new_user_session_path %></li>
 			</ul>
 		</nav>
 	</div>
