--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -3,10 +3,10 @@
 		<%= link_to "Cafelog", root_path, class: "logo" %><i class="fas fa-coffee coffee"></i>
 		<nav>
 			<ul>
-				<li class="navlist"><%= link_to "About", "#1" %></li>
-				<li class="navlist"><%= link_to "Feature", "#2" %></li>
-				<li class="navlist"><%= link_to "Contact", "#3" %></li>
-				<li class="navlist"><%= link_to "Login", new_user_session_path %></li>
+				<li class="navlist"><i class="far fa-question-circle"></i><%= link_to "About", "#1" %></li>
+				<li class="navlist"><i class="far fa-bell"></i><%= link_to "Feature", "#2" %></li>
+				<li class="navlist"><i class="fab fa-instagram"></i><%= link_to "Contact", "#3" %></li>
+				<li class="navlist"><i class="fas fa-sign-in-alt"></i><%= link_to "Login", new_user_session_path %></li>
 			</ul>
 		</nav>
 	</div>
