--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,6 +11,9 @@
 					<%= attachment_image_tag post, :image, format: 'jpeg', size: "200x200" %>
 					<% end %>
 				<% end %>
+				<div>
+					<%= paginate @posts %> <!-- ページネーション -->
+				</div>
 			</div>
 		</div>
 	</div>
