--- a/app/views/post_images/edit.html.erb
+++ b/app/views/post_images/edit.html.erb
@@ -22,7 +22,7 @@
 							</tr>
 							<tr>
 								<td>タグ</td>
-								<td></td>
+								<td><%= f.text_field :tag_list %></td>
 							</tr>
 						</tbody>
 					</table>
